# ameba-tflite-micro

./: CMakeLists.txt  README.md
.github/workflows/: create_pull_request.yml
cmake/: CMakeLists.txt
examples/tflm_hello_world/: CMakeLists.txt  README.md  example_tflm_hello_world.cc
examples/tflm_hello_world/platform/ameba_dsp/: app_example.c  tflm_hello_world_dependencies.xml  tflm_hello_world_linked_resources.xml
examples/tflm_hello_world/platform/ameba_rtos/: CMakeLists.txt  app_example.c
examples/tflm_hello_world/platform/x86_linux/: CMakeLists.txt  main.c
examples/tflm_micro_speech/: README.md  example_tflm_micro_speech.cc
examples/tflm_micro_speech/platform/ameba_dsp/: app_example.c  tflm_micro_speech_dependencies.xml  tflm_micro_speech_linked_resources.xml
examples/tflm_micro_speech/platform/ameba_rtos/: CMakeLists.txt  app_example.c
examples/tflm_micro_speech/platform/x86_linux/: CMakeLists.txt  main.c
examples/tflm_mnist/: README.md  example_tflm_mnist.cc
examples/tflm_mnist/platform/ameba_dsp/: app_example.c  tflm_mnist_dependencies.xml  tflm_mnist_linked_resources.xml
examples/tflm_mnist/platform/ameba_rtos/: CMakeLists.txt  app_example.c
examples/tflm_mnist/platform/x86_linux/: CMakeLists.txt  main.c
